# uni

./: .gitignore  readme.md  template.md
3011/: reflect_relate.md  test.html
3011/ass2/: XSSI.html  notes.mkd
3036/: a1.mkd
3036/code/: jsconfig.json  sketch.js
3038/: clamp
3038/lab2/src/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  lab2-1.cxx  lab2-2.c  lab2-2.cxx  lab2-3.cxx
3038/lab3/src/: CMakeLists.txt  celsius2fahrenheit.cxx  lab3-1.cxx  lab3-2.cxx  lab3-3.cxx  lab3-4.cxx  lab3-5.cxx
3038/lab4/: CMakeLists.txt
3038/lab4/include/: Integer.h  StringInverter.h
3038/lab4/src/: CMakeLists.txt  Integer.cxx  StringInverter.cxx  TestInteger.cxx  TestStringInverter.cxx
3038/lab5/: CMakeLists.txt
3038/lab5/include/: Image.h
3038/lab5/src/: CMakeLists.txt  Image.cxx  TestImage.cxx
3038/lab6/: CMakeLists.txt  report.mkd
3038/lab6/cmake/: External_GTest.cmake
3038/lab6/docs/: Doxyfile.in
3038/lab6/include/: Image.h
3038/lab6/src/: Image.cxx  blending.cxx  box-filter.cxx  contrast-enhance.cxx  display.cxx  gaussian-filter.cxx  gradient-magnitude.cxx  laplacian-filter.cxx  negative.cxx  sharpen.cxx  test-constructors.cxx  test-gaussian.cxx  test-load-save.cxx  test-operators.cxx  test-rmse.cxx  test-zncc.cxx  threshold.cxx
3042/: 1a.html  1a.md  model.blend
